--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Virtual environments
+venv_mini_games/
+.venv/
+
+# PyCharm files
+.idea/
+*.iml
